--- a/portfolio.html
+++ b/portfolio.html
@@ -16,10 +16,10 @@
     <!-- HEADER -->
     <header class="header">
       <nav class="navigate">
-        <a href="./index.html" class="logo"
-          ><span class="accent">Web</span>Studio</a
+        <a href="./index.html" class="logo link"
+          >Web<span class="brand-color">Studio</span></a
         >
-        <ul class="navigate-list">
+        <ul class="navigate-list list">
           <li class="item"><a href="./index.html" class="link">Studio</a></li>
           <li class="item">
             <a href="./portfolio.html" class="link current">Portfolio</a>
@@ -44,8 +44,8 @@
     <main>
       <!-- PORTFOLIO SECTION -->
       <section class="portfolio">
-        <h2 class="hidden">Portfolio</h2>
-        <ul class="filter">
+        <h1 class="hidden">Portfolio</h1>
+        <ul class="filter list">
           <li class="item"><button class="btn" type="button">All</button></li>
           <li class="item">
             <button class="btn" type="button">Web Site</button>
@@ -58,7 +58,7 @@
             <button class="btn" type="button">Marketing</button>
           </li>
         </ul>
-        <ul class="cards">
+        <ul class="cards list">
           <li class="item">
             <a class="link" href=""
               ><img
@@ -172,8 +172,8 @@
     </main>
     <!-- FOOTER -->
     <footer class="footer">
-      <a href="./index.html" class="logo"
-        ><span class="accent">Web</span>Studio</a
+      <a href="./index.html" class="logo link"
+        >Web<span class="brand-color">Studio</span></a
       >
       <p class="text">
         Increase the flow of customers and sales for your business with digital
