--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <!-- HEADER -->
     <header class="header">
       <nav class="navigate">
-        <a href="./index.html" class="logo"
-          ><span class="accent">Web</span>Studio</a
+        <a href="./index.html" class="logo link"
+          >Web<span class="brand-color">Studio</span></a
         >
-        <ul class="navigate-list">
+        <ul class="navigate-list list">
           <li class="item">
             <a href="./index.html" class="link current">Studio</a>
           </li>
@@ -169,8 +169,8 @@
     </main>
     <!-- FOOTER -->
     <footer class="footer">
-      <a href="./index.html" class="logo"
-        ><span class="accent">Web</span>Studio</a
+      <a href="./index.html" class="logo link"
+        >Web<span class="brand-color">Studio</span></a
       >
       <p class="text">
         Increase the flow of customers and sales for your business with digital
