--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         >
         <ul class="navigate-list list">
           <li class="item">
-            <a href="./index.html" class="link current">Studio</a>
+            <a href="./index.html" class="link">Studio</a>
           </li>
           <li class="item">
             <a href="./portfolio.html" class="link">Portfolio</a>
