--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
         <ul class="navigate-list list">
           <li class="item"><a href="./index.html" class="link">Studio</a></li>
           <li class="item">
-            <a href="./portfolio.html" class="link current">Portfolio</a>
+            <a href="./portfolio.html" class="link">Portfolio</a>
           </li>
           <li class="item"><a href="" class="link">Contacts</a></li>
         </ul>
@@ -67,7 +67,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="subtitle">Banking App Interface Concept</h3>
+              <h2 class="subtitle">Banking App Interface Concept</h2>
               <p class="text">App</p></a
             >
           </li>
@@ -79,7 +79,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="subtitle">Cashless Payment</h3>
+              <h2 class="subtitle">Cashless Payment</h2>
               <p class="text">Marketing</p></a
             >
           </li>
@@ -91,7 +91,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="subtitle">Meditation App</h3>
+              <h2 class="subtitle">Meditation App</h2>
               <p class="text">App</p></a
             >
           </li>
@@ -103,7 +103,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="subtitle">Taxi Service</h3>
+              <h2 class="subtitle">Taxi Service</h2>
               <p class="text">Marketing</p></a
             >
           </li>
@@ -115,7 +115,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="subtitle">Screen Illustrations</h3>
+              <h2 class="subtitle">Screen Illustrations</h2>
               <p class="text">Design</p></a
             >
           </li>
@@ -127,7 +127,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="subtitle">Online Courses</h3>
+              <h2 class="subtitle">Online Courses</h2>
               <p class="text">Marketing</p></a
             >
           </li>
@@ -139,7 +139,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="subtitle">Instagram Stories Concept</h3>
+              <h2 class="subtitle">Instagram Stories Concept</h2>
               <p class="text">Design</p></a
             >
           </li>
@@ -151,7 +151,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="subtitle">Design</h3>
+              <h2 class="subtitle">Design</h2>
               <p class="text">Web Site</p></a
             >
           </li>
@@ -163,7 +163,7 @@
                 width="360"
                 height="300"
               />
-              <h3 class="subtitle">Fresh Coffee</h3>
+              <h2 class="subtitle">Fresh Coffee</h2>
               <p class="text">Web Site</p></a
             >
           </li>
