--- a/portfolio.html
+++ b/portfolio.html
@@ -147,11 +147,11 @@
             <a class="link" href=""
               ><img
                 src="./images/portfolio-8.jpg"
-                alt="Design"
+                alt="Organic Food"
                 width="360"
                 height="300"
               />
-              <h2 class="subtitle">Design</h2>
+              <h2 class="subtitle">Organic Food</h2>
               <p class="text">Web Site</p></a
             >
           </li>
